--- a/components/sections/SecondSection.module.scss
+++ b/components/sections/SecondSection.module.scss
@@ -57,7 +57,8 @@
     justify-content: center;
   }
   .mob_lottie {
-    width: 100%;
+    width: 500px;
+    height: 500px;
     display: flex;
     @include media(">tablet") {
       display: none;
